# binance-public-data

./: .gitignore  AGGREGATE_TRADE_UPDATES.md  LICENSE  README.md  config.py  main.py  pyproject.toml
Futures/: Futures-order-book-Level2-data-download.py
Futures_Order_Book_Download/: Futures-order-book-Level2-data-download.py  README.md
data/: .symbols.txt  cm-futures-symbols.txt  symbols.txt  um-futures-symbols.txt
download_api/: binance - python data download api .ipynb
powershell/: download-klines.ps1
python/: LICENSE  README.md  download-aggTrade.py  download-futures-fundingRates.py  download-futures-indexPriceKlines.py  download-futures-markPriceKlines.py  download-futures-premiumIndexKlines.py  download-kline.py  download-trade.py  enums.py  pyproject.toml  utility.py
python/src/binance_public_data/: __init__.py  download-kline.py  download_kline.py  download_trade.py  enums.py  utility.py
shell/: download-futures-klines-simultaneously.sh  download-klines.sh  fetch-all-trading-pairs.sh
src/binance_pandas_dataframe/: __init__.py  download_aggTrade.py  download_kline.py  download_trade.py  enums.py  utility.py
updates/: 2022-10-04_aggregate_trade_updates.csv
