[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "binance_pandas_dataframe"
authors = [
    {name = "binance"},
]
dependencies = [
    "flit_core >=3.5.1",
    "pandas"]

readme="README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

dynamic = ['version', 'description']
[project.urls]
Home="http://github.com/binance_public_data"


[project.scripts]
download_kline = "binance_pandas_dataframe.download_kline:main"
download_aggTrade = "binance_pandas_dataframe.download_aggTrade:main"
download_trade = "binance_pandas_dataframe.download_trade:main"